syntax = "proto3";

package qan;

option go_package = "qanpb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// Filters serves list of names of metrics.
service Filters {
  // GetFilters gets map of metrics names.
  rpc GetFilters(FiltersRequest) returns (FiltersReply) {
    option (google.api.http) = {
      post: "/v1/qan/GetFilters"
      body: "*"
    };
  }
}

// FiltersRequest contains period for which we need filters.
message FiltersRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

// FiltersReply is map of labels for given period.
message FiltersReply {
  map<string, LabelsValues> labels = 1;
}

// LabelsValues is label values and how many times this value occur.
message LabelsValues {
  repeated string value = 1;
  repeated int64 count = 2;
}
